# gitretro

./: .gitignore  README.md  pyproject.toml  ruff.toml
src/gitretro/: __init__.py  command.py  config.py  gemini.py  git.py  json_object.py  mdbook.py  state.py
src/gitretro/prompts/: DIFF.md  __init__.py
